[project]
name = "blog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "certifi>=2025.1.31",
    "click>=8.1.8",
    "dnspython>=2.7.0",
    "ecdsa>=0.19.1",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.11",
    "greenlet>=3.1.1",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "orjson>=3.10.15",
    "passlib>=1.7.4",
    "pyasn1>=0.6.1",
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "pydantic-extra-types>=2.10.3",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "rsa>=4.9",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.39",
    "starlette>=0.46.1",
    "typing-extensions>=4.12.2",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "watchfiles>=1.0.4",
    "websockets>=15.0.1",
]
